--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "FirstProject",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/adapt.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash1.png",
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adapt.png",
         "backgroundColor": "#FFFFFF"
       }
     },
