--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "FirstProject",
-    "slug": "FirstProject",
-    "version": "1.0.0",
+    "name": "AlBa3ati",
+    "slug": "alba3ati",
+    "version": "0.0.2",
     "orientation": "portrait",
     "icon": "./assets/adapt.png",
     "userInterfaceStyle": "light",
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adapt.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.mohy.alba3ati"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8c23cbf4-e501-4709-96d1-f10fd65a0182"
+      }
     }
   }
 }
