--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "socket.io-client": "^4.5.3"
+    "socket.io-client": "^4.5.3",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
