--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "firstproject",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "axios": "^1.1.3",
-    "expo": "~47.0.3",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "socket.io-client": "^4.5.3",
-    "zustand": "^4.1.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts"
-    ]
-  },
-  "private": true
+	"name": "firstproject",
+	"version": "2.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@react-navigation/bottom-tabs": "^6.4.0",
+		"@react-navigation/native": "^6.0.13",
+		"@react-navigation/native-stack": "^6.9.1",
+		"@rneui/base": "^4.0.0-rc.7",
+		"@rneui/themed": "^4.0.0-rc.7",
+		"axios": "^1.1.3",
+		"expo": "~47.0.3",
+		"expo-av": "~13.0.3",
+		"expo-secure-store": "~12.0.0",
+		"expo-splash-screen": "~0.17.5",
+		"expo-status-bar": "~1.4.2",
+		"react": "18.1.0",
+		"react-native": "0.70.5",
+		"react-native-loading-spinner-overlay": "^3.0.1",
+		"react-native-safe-area-context": "4.4.1",
+		"react-native-screens": "~3.18.0",
+		"socket.io-client": "^4.5.3",
+		"zustand": "^4.1.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9"
+	},
+	"rnpm": {
+		"assets": [
+			"./assets/fonts"
+		]
+	},
+	"private": true
 }
